--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,17 @@
+release notes v. 0.6
+********************
+2016-02-13
+
+NGP.sh
+- new textual interface to the NGP
+
+multi-list.sh
+- added -s option
+					
+manual_0.6.pdf:
+- updated for version 0.6
+
+
 release notes v. 0.4.1
 **********************
 2013-12-27
